--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
+* {
+    font-family: 'Roboto', sans-serif;
+    color:#ddd;
+}
+
 body {
-    background-color: blanchedalmond;
+    background-color: #222831;
     margin: 0;
 }
 
@@ -7,8 +12,10 @@ body {
     font-size: 50px;
     font-weight: bold;
     text-align: center;
-    color: rgb(27, 85, 148);
-    background-color: black;
+    color: #fac650;
+    background-color: #111720;
+    font-family: 'Caveat Brush', cursive;
+    font-style: italic;
 }
 
 #greeting, #scoreKeeperText, #announcePlayer  {
@@ -20,7 +27,7 @@ body {
 img {
     height:125px;
     width: auto;
-    background-color: lightgray;
+    background-color: #4a4f57;
     border: 5px solid black;
     border-radius: 10px;
 }
@@ -39,8 +46,8 @@ img {
 }
 
 #playButtons, #cpButtons {
-    background-color: rgb(219, 163, 163);
-    border: 2px solid darkgreen;
+    background-color: #111720;
+    border: 2px solid #fac650;
     border-radius: 10px;
 }
 
@@ -64,6 +71,23 @@ img {
     width: auto;
     border: 1px solid black;
     border-radius: 10px;
-    background-color: lightcyan;
+    background-color: #1e3652;
     padding: 2px;
+}
+
+#plIcon {
+   background-color: #682e2e; 
+}
+
+#Rock , #Paper , #Scissors {
+    transform: scaleX(-1);
+}
+
+#greeting, #announcePlayer, #scoreKeeperText {
+    font-family: 'Lobster', cursive;
+    margin: 5px;
+}
+
+#greeting, #announcePlayer {
+    font-family: 'Lobster', cursive;
 }
